# scrabblebabble

./: .gitignore  Dockerfile  README.md  fly.toml  hello.py  main.py  pyproject.toml  wsgi.py
.github/workflows/: linters.yml  python-unittest.yml
babble/: babbler.py  wordlist_providers.py
templates/: index.html
tests/: test_main.py
